# Ares

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Core/: Api.h  BuildConfig.h.in  CMakeLists.txt  Core.cc  Core.hh  CoreConfig.h  FrameData.hh  GlobalData.hh  Main.cc
Core/App/: Api.hh  AppApi.hh  AppModule.cc  AppModule.hh  Dll.hh
Core/Base/: AtomicArray.hh  AtomicPool.hh  CoreSerializers.hh  Delegate.hh  DoubleBuffered.hh  ErrString.hh  Handle.hh  KeyString.hh  LinTypes.hh  MapTree.hh  MemStreambuf.hh  MultiDelegate.hh  NullStreambuf.hh  NumTypes.hh  Platform.h  Ref.hh  Serializer.hh  TypeMap.hh  Utils.hh
Core/Comp/: CameraComp.hh  Comp.hh.in  CompMeta.hh  CompTypes.hh  MeshComp.hh  RigidBodyComp.hh  TransformComp.hh  gencomps.py
Core/Data/: Config.hh  ConfigResourceParser.cc  ConfigResourceParser.hh  FileIO.cc  FileIO.hh  FileStore.hh  FolderFileStore.hh  Path.hh  PlainText.hh  ResourceHandle.hh  ResourceLoader.cc  ResourceLoader.hh  ResourcePack.hh  ResourceParser.hh  ResourceRef.hh  ResourceRefSerializer.hh
Core/Debug/: DebugModule.cc  DebugModule.hh  Log.cc  Log.hh  Profiler.cc  Profiler.hh  TimeProbe.hh
Core/Docs/: ConfigFormat.md
Core/Event/: EventMatrix.hh  EventQueue.hh
Core/Gfx/: GfxBackend.hh  GfxCmd.hh  GfxModule.cc  GfxModule.hh  GfxPipeline.cc  GfxPipeline.hh  GfxRenderer.cc  GfxRenderer.hh  GfxResources.hh  Gltf.cc  Gltf.hh  ImageFormat.hh  Material.hh  PerspectiveCamera.hh  Shader.hh  ShaderSource.hh  Vulkan.cc  Vulkan.hh
Core/Gfx/GL33/: Backend.cc  Backend.hh  GBuffer.cc  GBuffer.hh  MeshBuf.cc  MeshBuf.hh  Shader.cc  Shader.hh  Texture.cc  Texture.hh
Core/Input/: Axis.hh  AxisMap.hh  InputMapper.hh  InputModule.cc  InputModule.hh
Core/Mem/: MallocOverrides.cc  Mem.cc  MemFuncs.hh  MemStats.hh  NewOverrides.cc
Core/Mem/rpmalloc/: Globals.hh  Hooks.cc  MemFuncs.cc  MemStats.cc  PThreadOverrides.cc
Core/Mem/stdlib/: Globals.hh  MemFuncs.cc  MemStats.cc
Core/Module/: Module.hh
Core/Phys/: PhysModule.cc  PhysModule.hh  PhysMotionState.hh
Core/Resource/: CollisionShape.hh  Config.cc  Config.hh  Gltf.cc  Gltf.hh  Image.hh  Json.cc  Json.hh  Material.hh  Mesh.hh  PhysProps.hh  ShaderSrc.cc  ShaderSrc.hh
Core/Scene/: Comp.hh.in  CompMeta.hh  CompStore.hh  CompTypes.hh  Entity.hh  EntityId.hh  EntityRef.hh  Scene.cc  Scene.hh  SceneIterator.hh  gencomps.py
Core/Scene/Comps/: Debug.comp  Transform.comp
Core/Task/: Fiber.hh  FiberStackStore.hh  Task.hh  TaskScheduler.cc  TaskScheduler.hh  TaskVar.hh
Core/Visual/: Axis.hh  Color.hh  GLFW.cc  GLFW.hh  InputMapper.cc  InputMapper.hh  Resolution.hh  VideoMode.hh  ViewCube.hh  ViewRect.hh  Window.cc  Window.hh
Docs/: MaterialFormat.md  ShaderFormat.md
Docs/Licenses/: 3RDPARTY.txt  LICENSE.txt
Resources/: TestScreen.armat
Resources/Gfx/: PBR.arsh  PBR.frag.glsl  PBR.vert.glsl  Postprocess.arsh  Postprocess.frag.glsl  Postprocess.vert.glsl
Utils/: cloc.py  cloc.sh
